--- a/package.json
+++ b/package.json
@@ -1,20 +1,37 @@
 {
   "name": "movinder-backend",
   "version": "1.0.0",
-  "description": "backend for the movinder 9gag idea",
-  "main": "index.js",
+  "description": "movinder project idea from 9gag",
+  "main": "build/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node ./src/server.ts"
+    "tsc": "tsc",
+    "dev": "ts-node ./app/server.ts"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Cacciuc/MovInder-Backend.git"
-  },
+  "keywords": [],
   "author": "Marco Cacciatore",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Cacciuc/MovInder-Backend/issues"
+  "dependencies": {
+    "@types/cors": "^2.8.7",
+    "@types/es6-shim": "^0.31.41",
+    "@types/express": "^4.17.8",
+    "@types/express-session": "^1.17.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "js-sha256": "^0.9.0",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^4.44.4",
+    "sequelize-typescript": "^0.6.11",
+    "sha.js": "^2.4.11",
+    "sqlite3": "^4.2.0",
+    "tsc": "^1.20150623.0",
+    "typescript": "2.7.2"
   },
-  "homepage": "https://github.com/Cacciuc/MovInder-Backend#readme"
+  "devDependencies": {
+    "tslint": "^5.20.1"
+  },
+  "engines": {
+    "node": "8.12.0",
+    "npm": "6.4.1"
+  }
 }
